--- a/css/style.scss
+++ b/css/style.scss
@@ -149,13 +149,13 @@ h6 {
     .navMenu ul {
       display: none;
       flex-direction: column;
-      background-color: white;
+      // background-color: white;
       border-bottom: 0.8px solid lightgray;
       transition: 5s;
       li {
         width: 100vw;
         text-align: center;
-        background-color: white;
+        // background-color: white;
         margin-left: 0;
         a {
           width: 100vw;
