--- a/css/style.css
+++ b/css/style.css
@@ -193,13 +193,10 @@ h6 {
 }
 .header {
   width: 100%;
-  height: 100vh;
-  display: flex;
-  place-items: center;
+  height: 80vh;
   min-height: 500px;
   animation: show 3s;
   background-image: url("../img/ecofiber-logo.png");
-  z-index: 99;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -207,35 +204,10 @@ h6 {
   background-blend-mode: multiply;
   background-color: #2F4858;
 }
-.header .color {
-  position: absolute;
-}
 
-@media screen and (max-width: 992px) {
-  .header {
-    flex-direction: column;
-    justify-content: center;
-  }
-  .header .header-left {
-    width: 100%;
-    margin-bottom: 10%;
-  }
-  .header .header-left div,
-  .header .header-left span {
-    text-align: center;
-    margin: 0;
-  }
-  .header .header-right {
-    width: 50%;
-  }
-}
 @media screen and (max-width: 768px) {
-  .header .header-left {
-    font-size: 2.2rem;
-    margin-bottom: 10%;
-  }
-  .header .header-right {
-    width: 70%;
+  .header {
+    max-height: 300px;
   }
 }
 /*********** About **********/
