--- a/css/style.scss
+++ b/css/style.scss
@@ -213,55 +213,30 @@ h6 {
 
 .header {
   width: 100%;
-  height: 100vh;
-  display: flex;
-  place-items: center;
+  height: 80vh;
   min-height: 500px;
   animation: show 3s;
   background-image: url("../img/ecofiber-logo.png");
-  z-index: 99;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
   background-blend-mode: multiply;
   background-color: $maincolor;
-
-  .color {
-    position: absolute;
-  }
 }
 
 
 // media query
 
-@media screen and (max-width: 992px) {
-  .header {
-    flex-direction: column;
-    justify-content: center;
-    .header-left {
-      width: 100%;
-      margin-bottom: 10%;
-      div,
-      span {
-        text-align: center;
-        margin: 0;
-      }
-    }
-    .header-right {
-      width: 50%;
-    }
-  }
-}
+// @media screen and (max-width: 992px) {
+//   .header {
+//   }
+// }
 @media screen and (max-width: 768px) {
   .header {
-    .header-left {
-      font-size: 2.2rem;
-      margin-bottom: 10%;
-    }
-    .header-right {
-      width: 70%;
-    }
+    // min-height: 10px;
+    max-height: 300px;
+    // background-image: url("../img/ecofiber-small-logo-black.png");
   }
 }
 
