--- a/css/style.scss
+++ b/css/style.scss
@@ -234,6 +234,8 @@ h6 {
 // }
 @media screen and (max-width: 768px) {
   .header {
+    background-color: transparent;
+
     // min-height: 10px;
     max-height: 300px;
     // background-image: url("../img/ecofiber-small-logo-black.png");
