--- a/css/style.css
+++ b/css/style.css
@@ -204,11 +204,21 @@ h6 {
   background-blend-mode: multiply;
   background-color: #2F4858;
 }
+.header img {
+  display: none;
+}
 
 @media screen and (max-width: 768px) {
   .header {
     background-color: transparent;
-    max-height: 300px;
+    background-image: none;
+    height: 20vh;
+    min-height: 200px;
+  }
+  .header img {
+    display: inline;
+    margin-top: 5rem;
+    width: 100%;
   }
 }
 /*********** About **********/
