--- a/css/style.scss
+++ b/css/style.scss
@@ -223,6 +223,11 @@ h6 {
   background-position: center;
   background-blend-mode: multiply;
   background-color: $maincolor;
+
+  img {
+    display: none;
+  }
+
 }
 
 
@@ -235,10 +240,14 @@ h6 {
 @media screen and (max-width: 768px) {
   .header {
     background-color: transparent;
-
-    // min-height: 10px;
-    max-height: 300px;
-    // background-image: url("../img/ecofiber-small-logo-black.png");
+    background-image: none;
+    height: 20vh;
+    min-height: 200px;
+    img {
+      display: inline;
+      margin-top: 5rem;
+      width: 100%;
+    }
   }
 }
 
