--- a/css/style.css
+++ b/css/style.css
@@ -212,13 +212,14 @@ h6 {
   .header {
     background-color: transparent;
     background-image: none;
-    height: 20vh;
+    height: 280px;
     min-height: 200px;
   }
   .header img {
     display: inline;
-    margin-top: 5rem;
+    margin-top: 80px;
     width: 100%;
+    height: 200px;
   }
 }
 /*********** About **********/
