--- a/css/style.scss
+++ b/css/style.scss
@@ -241,12 +241,13 @@ h6 {
   .header {
     background-color: transparent;
     background-image: none;
-    height: 20vh;
+    height: 280px;
     min-height: 200px;
     img {
       display: inline;
-      margin-top: 5rem;
+      margin-top: 80px;
       width: 100%;
+      height: 200px;
     }
   }
 }
