--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ h6 {
   display: flex;
 }
 .about .about-content .about-left {
-  width: 40%;
+  width: 50%;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -259,7 +259,7 @@ h6 {
   margin-top: 1.3rem;
 }
 .about .about-content .about-right {
-  width: 60%;
+  width: 50%;
   padding: 1.5rem;
   margin: auto;
   line-height: 1.5;
@@ -292,7 +292,7 @@ h6 {
 /*********** products **********/
 .products {
   margin: auto;
-  padding: 6.5rem 20%;
+  padding: 6.5rem 15%;
   background-color: white;
   border: 3px solid #2F4858;
   border-top: none;
@@ -305,7 +305,7 @@ h6 {
 .products .product1 {
   display: flex;
   flex-direction: column;
-  place-items: center;
+  margin-bottom: 5rem;
 }
 .products .product1 p {
   margin-bottom: 3rem;
@@ -313,8 +313,41 @@ h6 {
   color: gray;
   font-size: 1.5rem;
 }
-.products .product1 img {
-  width: 90%;
+.products .product1 .psf {
+  color: #2F4858;
+  font-weight: bold;
+  margin-bottom: 2rem;
+  line-height: 30px;
+}
+.products .product1 .fiber-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.products .product1 .fiber-content .img-content {
+  width: 32%;
+  margin-right: 2rem;
+}
+.products .product1 .fiber-content .text-content {
+  line-height: 30px;
+}
+.products .product1 .fiber-content .text-content .texts {
+  text-align: left;
+  color: gray;
+}
+.products .product1 .fiber-content .text-content .texts .properties {
+  text-align: left;
+  padding: 0 1rem;
+}
+.products .product1 .fiber-content .text-content .composition {
+  margin-bottom: 0.5rem;
+}
+.products .product1 .psf-text {
+  margin-top: 2rem;
+  color: #2F4858;
+  line-height: 30px;
+  text-align: center;
+  font-weight: bold;
 }
 .products .product2 {
   display: flex;
@@ -322,7 +355,7 @@ h6 {
   place-items: center;
 }
 .products .product2 p {
-  margin: 5rem 0 3rem 0;
+  margin-bottom: 3rem;
   font-weight: bold;
   color: gray;
   font-size: 1.5rem;
@@ -341,7 +374,32 @@ h6 {
   color: gray;
   font-size: 1.5rem;
 }
+.products .product3 .text-content {
+  line-height: 30px;
+  text-align: justify;
+  color: gray;
+}
+.products .product3 .text-content .application {
+  text-align: justify;
+  padding: 0 1rem;
+  color: gray;
+}
 .products .product3 img {
+  width: 90%;
+  margin-top: 3rem;
+}
+.products .product4 {
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+}
+.products .product4 p {
+  margin: 5rem 0 3rem 0;
+  font-weight: bold;
+  color: gray;
+  font-size: 1.5rem;
+}
+.products .product4 img {
   width: 90%;
 }
 
@@ -349,7 +407,7 @@ h6 {
   .products {
     padding: 6rem 10%;
   }
-  .products .product1, .products .product2, .products .roduct3 {
+  .products .product1, .products .product2, .products .product3, .products .product4 {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -371,10 +429,25 @@ h6 {
 .process .row1 {
   place-items: center;
   align-items: center;
-  padding: 4rem 0;
+  display: flex;
+  flex-direction: column;
+}
+.process .row1 p {
+  margin-bottom: 3rem;
+  font-weight: bold;
+  color: gray;
+  font-size: 1.5rem;
+}
+.process .row1 .process-content {
+  width: 70%;
+  color: gray;
+  line-height: 25px;
+  font-size: 1.2rem;
+  text-align: justify;
 }
 .process .row1 img {
-  width: 90%;
+  width: 80%;
+  margin-top: 3.5rem;
 }
 
 /*********** Footer **********/
@@ -431,18 +504,14 @@ h6 {
 .product1,
 .product2,
 .product3,
-.col1-left,
-.col2-left,
-.col3-left {
+.product4,
+.row1 {
   opacity: 0;
   transform: translateX(-50px);
   transition: all 0.8s ease-in-out;
 }
 
-.about-right,
-.col1-right,
-.col2-right,
-.col3-right {
+.about-right {
   opacity: 0;
   transform: translateX(50px);
   transition: all 0.8s ease-in-out;
