--- a/css/style.scss
+++ b/css/style.scss
@@ -274,7 +274,7 @@ h6 {
     display: flex;
 
     .about-left {
-      width: 40%;
+      width: 50%;
       margin: auto;
       display: flex;
       flex-direction: column;
@@ -290,7 +290,7 @@ h6 {
       }
     }
     .about-right {
-      width: 60%;
+      width: 50%;
       padding: 1.5rem;
       margin: auto;
       line-height: 1.5;
@@ -329,7 +329,7 @@ h6 {
 
 .products {
   margin: auto;
-  padding: 6.5rem 20%;
+  padding: 6.5rem 15%;
   background-color: white;
   border: 3px solid $maincolor;
   border-top: none;
@@ -338,7 +338,57 @@ h6 {
     color: $maincolor;
     margin-bottom: 5rem;
   }
-  .product1{
+  .product1 {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5rem;
+    p {
+      margin-bottom: 3rem;
+      font-weight: bold;
+      color: gray;
+      font-size: 1.5rem;
+    }
+    .psf {
+      color: $maincolor;
+      font-weight: bold;
+      margin-bottom: 2rem;
+      line-height: 30px;
+    }
+    .fiber-content {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
+      .img-content {
+        width: 32%;
+        margin-right: 2rem;
+      }
+      .text-content {
+        line-height: 30px;
+        .texts {
+          text-align: left;
+          color: gray;
+          .properties {
+            text-align: left;
+            padding: 0 1rem;
+          }
+        }
+        
+        .composition {
+          margin-bottom: 0.5rem;
+        }
+      }
+    }
+    .psf-text {
+      margin-top: 2rem;
+      color: $maincolor;
+      line-height: 30px;
+      text-align: center;
+      font-weight: bold;
+    }
+    
+  }
+  .product2{
     display: flex;
     flex-direction: column;
     place-items: center;
@@ -352,7 +402,7 @@ h6 {
       width: 90%;
     }
   }
-  .product2 {
+  .product3 {
     display: flex;
     flex-direction: column;
     place-items: center;
@@ -361,13 +411,23 @@ h6 {
       font-weight: bold;
       color: gray;
       font-size: 1.5rem;
-
+    }
+    .text-content {
+      line-height: 30px;
+      text-align: justify;
+      color: gray;
+      .application {
+          text-align: justify;
+          padding: 0 1rem;
+          color: gray;
+      }
     }
     img {
       width: 90%;
+      margin-top: 3rem;
     }
   }
-  .product3 {
+  .product4 {
     display: flex;
     flex-direction: column;
     place-items: center;
@@ -387,7 +447,7 @@ h6 {
 @media screen and (max-width: 768px) {
   .products {
     padding: 6rem 10%;
-    .product1, .product2, .roduct3 {
+    .product1, .product2, .product3, .product4 {
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -407,13 +467,27 @@ h6 {
     color: $maincolor;
     margin-bottom: 4rem;
   }
-
   .row1{
     place-items: center;
     align-items: center;
-    padding: 4rem 0;
+    display: flex;
+    flex-direction: column;
+    p {
+      margin-bottom: 3rem;
+      font-weight: bold;
+      color: gray;
+      font-size: 1.5rem;
+    }
+    .process-content {
+      width: 70%;
+      color: gray;
+      line-height: 25px;
+      font-size: 1.2rem;
+      text-align: justify;
+    }
     img {
-      width: 90%;
+      width: 80%;
+      margin-top: 3.5rem;
     }
     
   }
@@ -476,17 +550,13 @@ h6 {
 .product1,
 .product2,
 .product3,
-.col1-left,
-.col2-left,
-.col3-left {
+.product4,
+.row1 {
   opacity: 0;
   transform: translateX(-50px);
   transition: all 0.8s ease-in-out;
 }
-.about-right,
-.col1-right,
-.col2-right,
-.col3-right {
+.about-right {
   opacity: 0;
   transform: translateX(50px);
   transition: all 0.8s ease-in-out;
