--- a/css/style.css
+++ b/css/style.css
@@ -484,36 +484,52 @@ h6 {
 .footer {
   background-color: #2F4858;
   margin: auto;
-  padding: 3rem 20%;
+  padding: 5rem 10%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.footer .contact-me {
-  font-size: 2.8rem;
+  justify-content: center;
   color: white;
 }
-.footer .contact-me p {
-  font-size: 1rem;
-  font-weight: 400;
-  margin-top: 2rem;
+.footer .contact-1 {
+  width: 33%;
+  text-align: left;
 }
-.footer .sns {
-  font-size: 1rem;
-  margin-top: 2rem;
+.footer .contact-1 img {
+  width: 70%;
 }
-.footer .sns div {
-  margin: 0.5rem;
+.footer .contact-1 p {
+  text-align: left;
+  margin: 1rem 0 0 1rem;
+  letter-spacing: 2px;
 }
-.footer .sns a {
-  color: #dff3c6;
+.footer .contact-1 p a, .footer .contact-1 p a:hover, .footer .contact-1 p a:focus, .footer .contact-1 p a:active {
   text-decoration: none;
-  margin: 0.6rem;
-  cursor: pointer;
-  transition: 0.3s;
+  color: inherit;
 }
-.footer .sns a:hover {
-  color: #ff8a43;
+.footer .contact-1 p a:hover {
+  color: blue;
+}
+.footer .contact-2 {
+  width: 33%;
+  text-align: left;
+}
+.footer .contact-2 h1 {
+  text-align: left;
+}
+.footer .contact-2 div {
+  margin-top: 2rem;
+  letter-spacing: 1.5px;
+}
+.footer .contact-2 div p {
+  text-align: left;
+  margin-top: 1rem;
+}
+.footer .contact-3 {
+  width: 33%;
+  text-align: left;
+}
+.footer .contact-3 iframe {
+  width: 90%;
+  min-height: 230px;
 }
 
 @media screen and (max-width: 768px) {
