--- a/css/style.scss
+++ b/css/style.scss
@@ -581,37 +581,43 @@ h6 {
       min-height: 230px;
     }
   }
-  // .contact-me {
-  //   font-size: 2.8rem;
-  //   color: white;
-  //   p {
-  //     font-size: 1rem;
-  //     font-weight: 400;
-  //     margin-top: 2rem;
-  //   }
-  // }
-  // .sns {
-  //   font-size: 1rem;
-  //   margin-top: 2rem;
-  //   div {
-  //     margin: 0.5rem;
-  //   }
-  //   a {
-  //     color: $logocolor;
-  //     text-decoration: none;
-  //     margin: 0.6rem;
-  //     cursor: pointer;
-  //     transition: 0.3s;
-  //     &:hover {
-  //       color: #ff8a43;
-  //     }
-  //   }
-  // }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
   .footer {
+    flex-direction: column;
     padding: 3rem 10%;
+    .contact-1 {
+      width: 100%;
+      img {
+        width: 50%;
+      }
+      p {
+        text-align: left;
+        margin: 0.5rem 0 0 0;
+        letter-spacing: 1px;
+      }
+    }
+    .contact-2 {
+      width: 100%;
+      margin-top: 3rem;
+      div {
+        margin-top: 1rem;
+        letter-spacing: 1px;
+        p {
+          margin-top: 0.5rem;
+        }
+      }
+    }
+    .contact-3 {
+      width: 100%;
+      margin-top: 3rem;
+      iframe {
+        width: 90%;
+        min-height: 250px;
+      }
+    }
+
   }
 }
 
